--- a/templates/Webpages/collected_image.html
+++ b/templates/Webpages/collected_image.html
@@ -70,7 +70,7 @@
                 <input id="email_input" type="email" name="E-mail" value=""/>
 
                 <p id="pwd_txt">Password</p>
-                <a href="/forget"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+
                 <input id="pwd_input" type="password" name="pwd" value=""/>
             </form> 
             <!-- Login -->
@@ -102,31 +102,13 @@
   <div id="Uploaded">
         <p class="Title">Collected Image</p>
         <ul id = "display_detail" class="display">
+        {% for item in list %}
           <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
+            <img src="{{ item.picture.cover.url }}">
+            <p>{{ item.picture.title }}</p>
+            <a href="/picture_display/{{ item.picture.picture }}"></a>
           </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
-          <li id="item">
-            <img src="/static/images/home/photo_1.jpg">
-            <p>Gates</p>
-            <a href="video_display.html"></a>
-          </li>
+        {% endfor %}
         </ul>
         <!-- Footer -->
       <div id = "Footer">
