--- a/templates/Transformation/upload.html
+++ b/templates/Transformation/upload.html
@@ -150,12 +150,13 @@
     </div>
       <div id = "Upload_image_content">
         <img id="preview" src="/static/images/edit/u98.png" width="250" height="200" style="display: block; width: 250px; height: 200px;">
-        <input type="file" name="file" id="doc" style="width:150px;" onchange="javascript:setImagePreview();">
+        <input type="file" name="discript_img" id="doc" style="width:150px;" onchange="javascript:setImagePreview();">
         <p id="Upload_image_txt" class="paragraph">Choose Filter</p>
-        <select id="filter_select">
-          <option selected value="Filter0">None</option>
-          <option value="Filter1">Filter1</option>
-          <option value="Filter2">Filter2</option>
+        <select id="filter_select" name="filter_type" class="ax_droplist">
+        <option value="None" selected>None</option>
+        {% for item in filter_list %}
+          <option value="{{ item }}">{{ item }}</option>
+        {% endfor %}
         </select>
         <button id="filter_btn">Apply</button>
       </div>
